fix jumping active page button on navbar

--- a/_sass/components/_main-menu.scss
+++ b/_sass/components/_main-menu.scss
@@ -27,6 +27,7 @@
           font-weight: bold;
           text-decoration: none;
           border-bottom: 4px solid $primary;
+          margin-bottom: 5px;
           &:hover {
             text-decoration: none;
             transition: all 225ms ease-in 0s;
